crates/paigasus-helikon-macros/tests/ui/bad_args_not_deserialize.stderr
error[E0277]: the trait bound `A: serde::de::DeserializeOwned` is not satisfied
  --> tests/ui/bad_args_not_deserialize.rs:16:1
   |
16 | #[tool]
   | ^^^^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> _serde::Deserialize<'de>` is not implemented for `A`
  --> tests/ui/bad_args_not_deserialize.rs:10:1
   |
10 | struct A {}
   | ^^^^^^^^
   = help: the following other types implement trait `_serde::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `A` to implement `DeserializeOwned`
note: required by a bound in `from_value`
  --> $CARGO/serde_json-$VERSION/src/value/mod.rs
   |
   | pub fn from_value<T>(value: Value) -> Result<T, Error>
   |        ---------- required by a bound in this function
   | where
   |     T: DeserializeOwned,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `from_value`
   = note: this error originates in the attribute macro `tool` (in Nightly builds, run with -Z macro-backtrace for more info)
